--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -19,33 +19,33 @@
 
 
         <!--        back arrow-->
-        <ImageView
-            android:id="@+id/fragment_user_profile_back_arrow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="37dp"
-            android:layout_marginTop="30dp"
-            android:contentDescription="@string/back_arrow_description"
-            android:src="@drawable/ic_back_arrow"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/white" />
+<!--        <ImageView-->
+<!--            android:id="@+id/fragment_user_profile_back_arrow"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="37dp"-->
+<!--            android:layout_marginTop="30dp"-->
+<!--            android:contentDescription="@string/back_arrow_description"-->
+<!--            android:src="@drawable/ic_back_arrow"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:tint="@color/white" />-->
 
 
         <!--    Circular image view -->
 
-        <TextView
-            android:id="@+id/fragment_user_profile_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="@string/user_details_title_str"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+<!--        <TextView-->
+<!--            android:id="@+id/fragment_user_profile_title"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="30dp"-->
+<!--            android:text="@string/user_details_title_str"-->
+<!--            android:textColor="@android:color/white"-->
+<!--            android:textSize="18sp"-->
+<!--            android:textStyle="bold"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -59,7 +59,7 @@
     <!--    Close constraint layout-->
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/fragment_create_profile_one_iv"
+            android:id="@+id/user_details_image_iv"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:translationZ="2dp"
@@ -290,28 +290,10 @@
 
                     </HorizontalScrollView>
 
-
-
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-
             </androidx.cardview.widget.CardView>
-
-
-
-
-
-
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
     </androidx.core.widget.NestedScrollView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
