--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -24,6 +24,11 @@
     <fragment
         android:id="@+id/userDetailsFragment"
         android:name="com.mylearning.devplacement.ui.detail.UserDetailsFragment"
-        android:label="fragment_user_details"
-        tools:layout="@layout/fragment_user_details" />
+        android:label="User details"
+        tools:layout="@layout/fragment_user_details" >
+
+        <argument
+            android:name="user"
+            app:argType="com.mylearning.devplacement.model.User" />
+    </fragment>
 </navigation>
