--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -107,14 +107,15 @@
 
 
             <TextView
-                android:id="@+id/user_detail_date_create_tv"
+                android:id="@+id/user_detail_gender_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/female_str"
-                android:textColor="@color/primary_color_70"
+                android:textSize="18dp"
+                android:textColor="@color/secondary_color_70"
                 android:layout_marginTop="5dp"
+               app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/user_detail_name_tv" />
 
 
@@ -127,7 +128,7 @@
                 app:cardElevation="2dp"
                 app:contentPadding="16dp"
                 android:layout_margin="5dp"
-                app:layout_constraintTop_toBottomOf="@id/user_detail_date_create_tv"
+                app:layout_constraintTop_toBottomOf="@id/user_detail_gender_tv"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
 
@@ -151,7 +152,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/date_created_str"
                         android:layout_marginStart="15dp"
-                        android:textSize="20sp"
+                        android:textColor="@color/primary_color_100"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/detail_card_date_created_iv"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -188,7 +189,7 @@
                         android:id="@+id/detail_card_color_iv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_date_icon"
+                        android:src="@drawable/ic_country_list"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -252,7 +253,7 @@
                         android:id="@+id/detail_card_country_iv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_date_icon"
+                        android:src="@drawable/ic_list_colors"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
